<resources>
    <string name="app_name">Drill Tracker</string>
    <string name="btn_text_retry">Retry</string>
    <string name="dialog_add_attempt_title">Add attempt</string>
    <string name="number">%1$d</string>
    <string name="number_float">%.2f</string>
    <string name="target_score_with_number_float">Target score: %1$s</string>
    <string name="target_score_with_number">Target score: %1$d</string>
    <string name="max_score_attainable">Maximum score attainable: %1$d</string>
    <string name="median_attempt">Median attempt</string>
    <string name="average_attempt">Average attempt</string>
    <string name="attempts">Attempts</string>
    <string name="high_score">High score</string>
    <string name="lifetime">Lifetime</string>
    <string name="this_session">This session</string>

    <string name="take_photo">Take photo</string>
    <string name="select_image">Choose photo</string>
    <string name="change_drill_diagram">Change drill diagram</string>
    <string name="confirm_delete_drill">Delete drill?</string>

    <string name="type_any">Any</string>
    <string name="type_positional">Positional</string>
    <string name="type_aiming">Aiming</string>
    <string name="type_safety">Safety</string>
    <string name="type_pattern">Pattern</string>
    <string name="type_kicking">Kicking</string>
    <string name="type_banking">Banking</string>
    <string name="type_speed">Speed</string>
    <string name="title_edit_drill">Edit drill</string>
    <string name="title_create_drill">Create drill</string>
    <string name="drill_name">Drill name</string>
    <string name="description">Description</string>
    <string name="type_of_drill">Type of drill:</string>
    <string name="maximum_score">Maximum score</string>
    <string name="target_score">Target score</string>
    <string name="undo_attempt">Undo attempt</string>
    <string name="edit">Edit</string>
    <string name="purchased">Purchased</string>
    <string name="drills_included_in">Drills included in %1$s</string>
    <string name="dialog_add_safety_attempt_title">Add Safety Attempt</string>


    <string-array name="create_drill_array">
        <item>@string/take_photo</item>
        <item>@string/select_image</item>
    </string-array>

    <string-array name="drill_types">
        <item>@string/type_any</item>
        <item>@string/type_aiming</item>
        <item>@string/type_banking</item>
        <item>@string/type_kicking</item>
        <item>@string/type_pattern</item>
        <item>@string/type_positional</item>
        <item>@string/type_safety</item>
        <item>@string/type_speed</item>
    </string-array>

    <string-array name="position_ratings">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="ball_positions">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>

    <string-array name="history_items">
        <item>All time</item>
        <item>Last 6 Months</item>
        <item>Last 3 Months</item>
        <item>Last Month</item>
        <item>Last Week</item>
    </string-array>

    <string-array name="english_items">
        <item>Any English</item>
        <item>Full Inside English</item>
        <item>Inside English</item>
        <item>No English</item>
        <item>Outside English</item>
        <item>Full Outside English</item>
    </string-array>

    <string-array name="speed_items">
        <item>2 diamonds soft</item>
        <item>1 diamond soft</item>
        <item><![CDATA[&#189; diamond soft]]></item>
        <item><![CDATA[&#188; diamond soft]]></item>
        <item>Correct speed</item>
        <item><![CDATA[&#188; diamond hard]]></item>
        <item><![CDATA[&#189; diamond hard]]></item>
        <item>1 diamond hard</item>
        <item>2 diamonds hard</item>
    </string-array>
</resources>
