<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        style="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:text="Shot Making Data"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="48dp"/>

    <com.google.android.material.card.MaterialCardView
        app:strokeWidth="1dp"
        app:strokeColor="@color/colorPrimary"
        app:cardElevation="0dp"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <androidx.gridlayout.widget.GridLayout
            style="@style/match_info_grid"
            android:padding="8dp">

            <TextView
                style="@style/player_stats"
                android:text="@string/this_session"
                app:layout_column="1" />

            <TextView
                style="@style/player_stats"
                android:text="@string/lifetime"
                app:layout_column="2" />

            <TextView
                style="@style/player_stats"
                android:gravity="start"
                android:text="@string/attempts"
                android:textColor="@color/primary_text"
                app:layout_columnWeight="0"
                app:layout_gravity="start" />

            <TextView
                android:id="@+id/sessionAttempts"
                style="@style/player_stats"
                android:text="0"
                android:textColor="@color/primary_text" />

            <TextView
                android:id="@+id/lifetimeAttempts"
                style="@style/player_stats"
                android:text="0"
                android:textColor="@color/primary_text"
                app:layout_column="2" />

            <TextView
                style="@style/player_stats"
                android:gravity="start"
                android:text="Makes (total)"
                android:textColor="@color/secondary_text"
                app:layout_columnWeight="0"
                app:layout_gravity="start" />

            <TextView
                android:id="@+id/sessionMakes"
                style="@style/player_stats"
                android:text="0"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/lifetimeMakes"
                style="@style/player_stats"
                android:text="0"
                android:textColor="@color/secondary_text"
                app:layout_column="2" />

            <TextView
                style="@style/player_stats"
                android:gravity="start"
                android:text="Over cuts"
                android:textColor="@color/primary_text"
                app:layout_columnWeight="0"
                app:layout_gravity="start" />

            <TextView
                android:id="@+id/sessionOverCuts"
                style="@style/player_stats"
                android:text="0"
                android:textColor="@color/primary_text" />

            <TextView
                android:id="@+id/lifetimeOverCuts"
                style="@style/player_stats"
                android:text="0"
                android:textColor="@color/primary_text"
                app:layout_column="2" />

            <TextView
                style="@style/player_stats"
                android:gravity="start"
                android:text="Under cuts"
                android:textColor="@color/secondary_text"
                app:layout_columnWeight="0"
                app:layout_gravity="start" />

            <TextView
                android:id="@+id/sessionUnderCuts"
                style="@style/player_stats"
                android:text="0"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/lifetimeUnderCuts"
                style="@style/player_stats"
                android:text="0"
                android:textColor="@color/secondary_text"
                app:layout_column="2" />

            <TextView
                style="@style/player_stats"
                android:gravity="start"
                android:text="Success rate"
                android:textColor="@color/primary_text"
                app:layout_columnWeight="0"
                app:layout_gravity="start" />

            <TextView
                android:id="@+id/sessionAvg"
                style="@style/player_stats"
                android:text="0"
                android:textColor="@color/primary_text" />

            <TextView
                android:id="@+id/lifetimeAvg"
                style="@style/player_stats"
                android:text="0"
                android:textColor="@color/primary_text"
                app:layout_column="2" />

        </androidx.gridlayout.widget.GridLayout>

    </com.google.android.material.card.MaterialCardView>
</LinearLayout>