<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/card_view_style"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="4dp"
    android:layout_marginStart="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.gridlayout.widget.GridLayout
            style="@style/match_info_grid"
            android:padding="16dp">

            <TextView
                style="@style/player_stats"
                android:text="@string/this_session"
                app:layout_column="1" />

            <TextView
                style="@style/player_stats"
                android:text="@string/lifetime"
                app:layout_column="2" />

            <TextView
                style="@style/player_stats"
                android:gravity="start"
                android:text="@string/attempts"
                android:textColor="@color/primary_text"
                app:layout_columnWeight="0"
                app:layout_gravity="start" />

            <TextView
                android:id="@+id/sessionAttempts"
                style="@style/player_stats"
                android:text="0"
                android:textColor="@color/primary_text" />

            <TextView
                android:id="@+id/lifetimeAttempts"
                style="@style/player_stats"
                android:text="0"
                android:textColor="@color/primary_text"
                app:layout_column="2" />

            <TextView
                style="@style/player_stats"
                android:gravity="start"
                android:text="Correct speed"
                android:textColor="@color/secondary_text"
                app:layout_columnWeight="0"
                app:layout_gravity="start" />

            <TextView
                android:id="@+id/sessionMakes"
                style="@style/player_stats"
                android:text="0"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/lifetimeMakes"
                style="@style/player_stats"
                android:text="0"
                android:textColor="@color/secondary_text"
                app:layout_column="2" />

            <TextView
                style="@style/player_stats"
                android:gravity="start"
                android:text="Too hard"
                android:textColor="@color/primary_text"
                app:layout_columnWeight="0"
                app:layout_gravity="start" />

            <TextView
                android:id="@+id/sessionHard"
                style="@style/player_stats"
                android:text="0"
                android:textColor="@color/primary_text" />

            <TextView
                android:id="@+id/lifetimeHard"
                style="@style/player_stats"
                android:text="0"
                android:textColor="@color/primary_text"
                app:layout_column="2" />

            <TextView
                style="@style/player_stats"
                android:gravity="start"
                android:text="Too soft"
                android:textColor="@color/secondary_text"
                app:layout_columnWeight="0"
                app:layout_gravity="start" />

            <TextView
                android:id="@+id/sessionSoft"
                style="@style/player_stats"
                android:text="0"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/lifetimeSoft"
                style="@style/player_stats"
                android:text="0"
                android:textColor="@color/secondary_text"
                app:layout_column="2" />

            <TextView
                style="@style/player_stats"
                android:gravity="start"
                android:text="Success rate"
                android:textColor="@color/primary_text"
                app:layout_columnWeight="0"
                app:layout_gravity="start" />

            <TextView
                android:id="@+id/sessionAvg"
                style="@style/player_stats"
                android:text="0"
                android:textColor="@color/primary_text" />

            <TextView
                android:id="@+id/lifetimeAvg"
                style="@style/player_stats"
                android:text="0"
                android:textColor="@color/primary_text"
                app:layout_column="2" />

            <TextView
                style="@style/player_stats"
                android:gravity="start"
                android:text="Average ♢ error"
                android:textColor="@color/secondary_text"
                app:layout_columnWeight="0"
                app:layout_gravity="start" />

            <TextView
                android:id="@+id/sessionError"
                style="@style/player_stats"
                android:text="0"
                android:textColor="@color/secondary_text" />

            <TextView
                android:id="@+id/lifetimeError"
                style="@style/player_stats"
                android:text="0"
                android:textColor="@color/secondary_text"
                app:layout_column="2" />

        </androidx.gridlayout.widget.GridLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>